--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "../libft/libft.a",
-				"../src/pipex_utils.c",
+				"../src/split_quotes.c",
+				"../src/split_quotes_utils.c",
                 "-o",
                 "${fileDirname}/${fileBasenameNoExtension}"
             ],
