--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
-            "args": ["file1", "ls -l", "awk -F ',' 'print \"Hola:\" $3'", "file2"],
+            "args": ["../datos.txt", "ls -l", "awk -F ' ' 'print \"Permisos:\" $1'", "../file2.txt"],
             "stopAtEntry": false,
             "cwd": "${fileDirname}",
             "environment": [],
