--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"libft.h": "c",
 		"get_next_line_bonus.h": "c",
-		"sstream": "c"
+		"sstream": "c",
+		"ft_printf.h": "c"
 	}
 }
